--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/briannorman/eli-utils.git"
+    "url": "git+https://github.com/briannorman/eli-utils.git"
   },
   "bugs": {
     "url": "https://github.com/briannorman/eli-utils/issues"
